# sqweebu

./: .gitignore  Cargo.toml  README.md  cargo.toml  components.json  old.rs  package-lock.json  package.json  settings.json  tsconfig.json
_adapter/: Cargo.toml
_adapter/src/: _speech.rs  lib.rs
_adapter/src/_gpt/: ollama.rs  openai.rs
_adapter/src/_speech/: azure.rs  google.rs
_application/: package-lock.json  package.json
_application/src/: store.ts
_application/src-tauri/: .gitignore  Cargo.toml  debug_audio_data.raw  tauri.conf.json
_application/src-tauri/src/: main.rs  ws.rs
_application/src/app/: layout.tsx  page.tsx
_application/src/components/: footer.tsx
_application/src/components/chat/: chat-message.tsx  chat-response-message.tsx
_application/src/components/header/: burger-button.tsx  command-input.tsx  header.tsx
_application/src/components/header/playback/: fast-forward-button.tsx  play-pause-button.tsx  playback-controls.tsx  rewind-button.tsx  stop-button.tsx  volume-button.tsx
_application/src/components/sidebar/: light-switch.tsx  sidebar.tsx
_application/src/components/utils/: hoverable-icon.tsx  icon-button.tsx  layout-provider.tsx  theme-provider.tsx
_application/src/config/: globals.css  mantine-theme.tsx  themes.tsx  types.ts
_application/src/pages/: chat-modal .tsx  command-modal .tsx  keyboard-modal .tsx  model-modal.tsx  settings-modal.tsx  voice-modal .tsx
_application/src/store/: command-store.ts  display-store.ts  store.ts  theme-store.ts
_application/src/utils/: format-timestamp.ts  get-view-size.tsx  playback-functions.ts  scroll-context.ts  theme-wrapper.tsx  web-socket.tsx
_core/: Cargo.toml
_core/src/: io.rs  lib.rs  playback.rs  utils.rs
_interface/: Cargo.toml
_interface/src/: lib.rs  playback.rs
_test/: Cargo.toml
_test/src/: main.rs
backup/: lib.rs  main.rs  old.rs  playback.rs  server.rs  transform_to_server.txt
core/: Cargo.toml
core/src/: _utils.rs  lib.rs  main.rs
core/src/_utils/: azure.rs  counter.rs  ollama.rs  playback.rs
http_server/: Cargo.toml
http_server/src/: main.rs
notes/: playback.old.rs  sqweebu
src/: _utils.rs  interface-store.ts  lib.rs  main.rs  store.ts  user-settings-store.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: _utils.rs  lib.rs  main.rs
src-tauri/src/_utils/: _api.rs  azure.rs  clipboard.rs  ollama.rs  playback.rs  transcribe.rs  user_settings.rs
src-tauri/src/_utils/_api/: ollama.rs
src/_api/: azure.rs  ollama.rs
src/_utils/: audio.rs  azure.rs  clipboard.rs  dummy_api.rs  endpoints.rs  ollama.old.rs  ollama.rs  playback.rs  record.rs  server.rs  test.rs  transcribe.rs
src/app/: layout.tsx  page.tsx
src/app/model/: page.tsx
src/components/: chat-box.tsx  footer.tsx  playback-controls.tsx  welcome.tsx
src/components/chat/: chat-footer.tsx  chat-header.tsx  chat-main.tsx  chat-message.tsx  chat-response-message.tsx
src/components/header/: burger-button.tsx  command-input.tsx  header.tsx
src/components/header/playback/: fast-forward-button.tsx  play-pause-button.tsx  playback-controls.tsx  playback-icon-button.tsx  rewind-button.tsx  stop-button.tsx  volume-button.tsx
src/components/playback/: fast-forward-button.tsx  play-pause-button.tsx  playback-controls.tsx  playback-icon-button.tsx  rewind-button.tsx  stop-button.tsx  volume-button.tsx
src/components/sidebar/: light-switch.tsx  sidebar.tsx
src/components/ui/: button.tsx  input.tsx
src/config/: globals.css  themes.tsx
src/pages/: chat-modal .tsx  command-modal .tsx  keyboard-modal .tsx  model-modal.tsx  settings-modal.tsx  voice-modal .tsx
src/utils/: clipboard.rs  command.rs  dictation.rs  get-view-size.tsx  hoverable-icon.tsx  icon-button.tsx  main-functions.ts  mod.rs  ollama.rs  settings.tsx  speak.rs  theme-wrapper.tsx
temp/: .directory
tests/: Cargo.toml  test.rs
