[package]
name = "chatbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
ollama-rs = { version = "0.1.6", features = ["stream"] }
regex = "1.10.3"
reqwest = { version = "0.11.23", features = ["json"] }
rust_tokenizers = "8.1.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
tokio = { version = "1.35.1", features = ["full"] }
tungstenite = "0.21.0"

[lints.rust]
unsafe_code = "forbid"
unused = "allow"
