[package]
name = "_adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unused = "allow"

[dependencies]
_interface = { path = "../_interface" }
tauri = { version = "1.5.4", features = [] }
dotenv = "0.15.0"
reqwest = { version = "0.11.24", features = ["json", "stream"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sentence = "0.0.2"
tokio-stream = "0.1.14"
serde_json = "1.0"
anyhow = "1.0.80"
vosk = "0.2.0"
hound = "3.5.1"
