[package]
name = "_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
_interface = { path = "../_interface" }
_core = { path = "../_core" }

tokio = { version = "1.36.0", features = ["full"] }
env_logger = "0.11.2"
chrono = "0.4.34"
