[package]
name = "core"
version = "0.1.0"
edition = "2018"

[lints.rust]
unused = "allow"

[dependencies]
actix-web = "4.5.1"
crossterm = "0.27.0"
dotenv = "0.15.0"
env_logger = "0.11.1"
reqwest = { version = "0.11.24", features = ["json", "stream"] }
rodio = "0.17.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
