[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[lints.rust]
unused = "allow"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "clipboard-all", "global-shortcut-all", "system-tray"] }
actix-web = "4.5.1"
crossterm = "0.27.0"
dotenv = "0.15.0"
env_logger = "0.11.1"
reqwest = { version = "0.11.24", features = ["json", "stream"] }
rodio = "0.17.3"
sentence = "0.0.2"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
lazy_static = "1.4.0"
anyhow = "1.0.80"
vosk = "0.2.0"
hound = "3.5.1"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
